--- a/maestro-test-scripts/pom.xml
+++ b/maestro-test-scripts/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>net.orpiske</groupId>
+        <groupId>org.maestro</groupId>
         <artifactId>maestro-java</artifactId>
         <version>1.3.0-SNAPSHOT</version>
     </parent>
