--- a/maestro-worker/src/main/resources/config/log4j.properties
+++ b/maestro-worker/src/main/resources/config/log4j.properties
@@ -2,7 +2,7 @@ log4j.appender.core=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.core.DatePattern='.'yyyy-MM-dd
 log4j.appender.core.append=true
 log4j.appender.core.layout=org.apache.log4j.PatternLayout
-log4j.appender.core.file=${org.maestro.home}/logs/core.log
+log4j.appender.core.file=${org.maestro.home}/logs/${maestro.worker.role}.log
 log4j.appender.core.layout.ConversionPattern=%-5p %d{HH:mm:ss,SSS} %.12X{id} %c - %m%n
 
 log4j.rootLogger=INFO, core
