REF: the worker managers
Refactor the worker manager so that adding more common functionality to
it (as will be required for dynamic data server resolution) won't result
in overly complex code.

--- a/maestro-worker/src/main/resources/config/maestro-worker.properties
+++ b/maestro-worker/src/main/resources/config/maestro-worker.properties
@@ -1,4 +1,4 @@
 # Common worker properties
 
-# Data server port. Defaults to 8000 if unset
+# Data server port. Defaults to random if unset
 # data.server.port=8000
