--- a/maestro-worker/src/main/resources/config/maestro-worker.properties
+++ b/maestro-worker/src/main/resources/config/maestro-worker.properties
@@ -2,3 +2,7 @@
 
 # Data server port. Defaults to random if unset
 # data.server.port=8000
+
+# Data server host can be used to override the automatically detected
+# hostname/IP address
+# data.server.host=my.fqdn.host.com
