--- a/maestro-reports/pom.xml
+++ b/maestro-reports/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>net.orpiske</groupId>
             <artifactId>hdr-histogram-plotter</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.1.0</version>
         </dependency>
 
         <dependency>
