WIP: Added basic structure to running external endpoints using Groovy

--- a/maestro-agent/pom.xml
+++ b/maestro-agent/pom.xml
@@ -13,6 +13,16 @@
     <dependencies>
         <dependency>
             <groupId>org.maestro</groupId>
+            <artifactId>maestro-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.maestro</groupId>
+            <artifactId>maestro-contrib</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.maestro</groupId>
             <artifactId>maestro-worker</artifactId>
             <version>${project.version}</version>
         </dependency>
