UPD: semi-functional implementation of the fail-condition-latency
Already supports failing the tests based on the max latency obtained.
The code needs more work in order to not fail due to the warm up period.

--- a/maestro-worker/src/main/resources/config/maestro-worker.properties
+++ b/maestro-worker/src/main/resources/config/maestro-worker.properties
@@ -6,3 +6,8 @@
 # Data server host can be used to override the automatically detected
 # hostname/IP address
 # data.server.host=my.fqdn.host.com
+
+# The amount of time, in milliseconds, between each update of the latency reporting information.
+# This also affects how fresh the latency information is when evaluating the FCL for go/no-go
+# purposes
+# maestro.worker.reporting.interval=10000
