--- a/maestro-worker/src/main/resources/config/maestro-worker.properties
+++ b/maestro-worker/src/main/resources/config/maestro-worker.properties
@@ -11,3 +11,13 @@
 # This also affects how fresh the latency information is when evaluating the FCL for go/no-go
 # purposes
 # maestro.worker.reporting.interval=10000
+
+
+# Default policy when evaluating the FCL. Acceptable values are either 'hard' or 'soft'. The value hard means that if
+# the latency *ever* the threshold set by the front-end, then the test is aborted. The value 'soft' means that the
+# current latency threshold will be checked against a percentile defined on 'maestro.worker.fcl.soft.percentile'.
+# The default FCL policy is 'soft'.
+# maestro.worker.fcl.default.policy=soft
+
+# The percentile used to check the latency threshold for the 'soft' FCL policy
+# maestro.worker.fcl.soft.percentile=90.0
