--- a/maestro-inspector/pom.xml
+++ b/maestro-inspector/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>maestro-java</artifactId>
-        <groupId>net.orpiske</groupId>
+        <groupId>org.maestro</groupId>
         <version>1.3.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -12,4 +12,21 @@
     <artifactId>maestro-inspector</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.maestro</groupId>
+            <artifactId>maestro-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.maestro</groupId>
+            <artifactId>maestro-contrib</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.maestro</groupId>
+            <artifactId>maestro-worker</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
