--- a/maestro-inspectors/maestro-activemq-inspectors/pom.xml
+++ b/maestro-inspectors/maestro-activemq-inspectors/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.jolokia</groupId>
             <artifactId>jolokia-client-java</artifactId>
-            <version>1.2.2</version>
+            <version>2.0.0-M3</version>
         </dependency>
     </dependencies>
 
