NEW: automatically detect the hostname

--- a/maestro-inspector/src/main/resources/config/maestro-inspector.properties
+++ b/maestro-inspector/src/main/resources/config/maestro-inspector.properties
@@ -6,3 +6,6 @@
 # Data server host can be used to override the automatically detected
 # hostname/IP address
 # data.server.host=my.fqdn.host.com
+
+# A fixed hostname to override the auto-detection
+# maestro.inspector.host
