--- a/maestro-agent/pom.xml
+++ b/maestro-agent/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
-            <version>RELEASE</version>
+            <version>2.4.14</version>
         </dependency>
     </dependencies>
 
