--- a/maestro-inspectors/maestro-activemq-inspectors/pom.xml
+++ b/maestro-inspectors/maestro-activemq-inspectors/pom.xml
@@ -18,6 +18,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.5</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.jolokia</groupId>
             <artifactId>jolokia-client-java</artifactId>
             <version>2.0.0-M3</version>
