FIX: incorrect inspector class reference

--- a/maestro-inspector/src/main/resources/config/maestro-inspector-service.conf
+++ b/maestro-inspector/src/main/resources/config/maestro-inspector-service.conf
@@ -2,7 +2,7 @@
 MAESTRO_BROKER="mqtt://localhost:1883"
 
 # The sender worker
-MAESTRO_INSPECTOR_CLASS="org.maestro.maestro.inspector.activemq.ArtemisInspector"
+MAESTRO_INSPECTOR_CLASS="org.maestro.inspector.activemq.ArtemisInspector"
 
 # The log directory
 MAESTRO_LOG_DIR="/var/log/mpt/"
