--- a/extra/docker/maestro-suts/apache-artemis/Dockerfile
+++ b/extra/docker/maestro-suts/apache-artemis/Dockerfile
@@ -5,9 +5,7 @@ ENV ARTEMIS_VERSION ${ARTEMIS_VERSION:-2.5.0}
 ARG ARTEMIS_JOURNAL
 ENV ARTEMIS_JOURNAL ${ARTEMIS_JOURNAL:-aio}
 ENV MAESTRO_SUT_ROOT /opt/maestro/sut/
-EXPOSE 8161
-EXPOSE 5672
-EXPOSE 61616
+EXPOSE 5672 8161 61613 61616
 RUN yum install -y java-1.8.0-openjdk libaio
 ENV JAVA_HOME /etc/alternatives/jre
 RUN mkdir -p ${MAESTRO_SUT_ROOT}
