--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <packaging>pom</packaging>
     <version>1.3.0-SNAPSHOT</version>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <api.version.site>1.3</api.version.site>
     </properties>
 
