--- a/maestro-agent/pom.xml
+++ b/maestro-agent/pom.xml
@@ -31,6 +31,13 @@
             <artifactId>groovy</artifactId>
             <version>2.4.14</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>4.5.4.201711221230-r</version>
+        </dependency>
+
     </dependencies>
 
     <build>
