--- a/maestro-agent/src/main/resources/config/maestro-agent.properties
+++ b/maestro-agent/src/main/resources/config/maestro-agent.properties
@@ -6,3 +6,6 @@
 # Data server host can be used to override the automatically detected
 # hostname/IP address
 # data.server.host=my.fqdn.host.com
+
+# A folder that overrides the default extension points provided w/ the Agent
+# maestro.agent.ext.path.override=/path/to/default/override
