--- a/maestro-cli/pom.xml
+++ b/maestro-cli/pom.xml
@@ -31,6 +31,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>4.5.4.201711221230-r</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.maestro</groupId>
             <artifactId>maestro-client</artifactId>
             <version>${project.version}</version>
