--- a/extra/docker/maestro-worker/Dockerfile
+++ b/extra/docker/maestro-worker/Dockerfile
@@ -6,7 +6,7 @@ ENV MAESTRO_APP_ROOT /opt/maestro
 EXPOSE 8000
 RUN mkdir -p ${MAESTRO_APP_ROOT}
 WORKDIR ${MAESTRO_APP_ROOT}
-RUN yum install -y java-1.8.0-openjdk
+RUN yum install -y java-1.8.0-openjdk ntp
 ENV JAVA_HOME /etc/alternatives/jre
 RUN curl http://orpiske.net/files/maestro-java/${MAESTRO_WORKER_VERSION}/maestro-worker-${MAESTRO_WORKER_VERSION}-bin.tar.gz -o maestro-worker.tar.gz
 RUN tar -xvf maestro-worker.tar.gz && ln -s ${MAESTRO_APP_ROOT}/maestro-worker-${MAESTRO_WORKER_VERSION} ${MAESTRO_APP_ROOT}/maestro-worker
