NEW: initial implementation of a common plotting infrastructure

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
     <modules>
         <module>maestro-common</module>
         <module>maestro-contrib</module>
+        <module>maestro-plotters</module>
         <module>maestro-reports</module>
         <module>maestro-client</module>
         <module>maestro-cli</module>
