--- a/maestro-plotters/maestro-plotter-common/pom.xml
+++ b/maestro-plotters/maestro-plotter-common/pom.xml
@@ -4,7 +4,7 @@
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
+  ~ You may obtain a copy strictOf the License at
   ~
   ~ http://www.apache.org/licenses/LICENSE-2.0
   ~
@@ -57,6 +57,13 @@
             <artifactId>commons-csv</artifactId>
             <version>1.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+
     </dependencies>
 
 
