--- a/maestro-plotters/maestro-plotter-common/pom.xml
+++ b/maestro-plotters/maestro-plotter-common/pom.xml
@@ -64,6 +64,12 @@
             <version>3.6.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.knowm.xchart</groupId>
+            <artifactId>xchart</artifactId>
+            <version>3.5.0</version>
+        </dependency>
+
     </dependencies>
 
 
