--- a/maestro-plotters/maestro-plotter-common/pom.xml
+++ b/maestro-plotters/maestro-plotter-common/pom.xml
@@ -29,6 +29,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.maestro</groupId>
+            <artifactId>maestro-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
@@ -68,6 +74,13 @@
             <groupId>org.knowm.xchart</groupId>
             <artifactId>xchart</artifactId>
             <version>3.5.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
