--- a/maestro-inspectors/pom.xml
+++ b/maestro-inspectors/pom.xml
@@ -30,6 +30,7 @@
 
     <modules>
         <module>maestro-activemq-inspectors</module>
+        <module>maestro-amqp-inspectors</module>
     </modules>
 
 </project>
