REF: decouple the reusable parts of the worker to prevent JMS code from leaking to other modules

--- a/maestro-workers/pom.xml
+++ b/maestro-workers/pom.xml
@@ -29,6 +29,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>maestro-worker-common</module>
         <module>maestro-worker-jms</module>
     </modules>
     
