--- a/maestro-agent/pom.xml
+++ b/maestro-agent/pom.xml
@@ -39,13 +39,20 @@
         </dependency>
         <dependency>
             <groupId>org.maestro</groupId>
-            <artifactId>maestro-worker</artifactId>
+            <artifactId>maestro-worker-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
             <version>2.4.14</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.3.1</version>
         </dependency>
 
         <dependency>
