--- a/maestro-inspector/pom.xml
+++ b/maestro-inspector/pom.xml
@@ -41,7 +41,7 @@
         </dependency>
         <dependency>
             <groupId>org.maestro</groupId>
-            <artifactId>maestro-worker</artifactId>
+            <artifactId>maestro-worker-common</artifactId>
             <version>${project.version}</version>
         </dependency>
 
@@ -49,6 +49,12 @@
             <groupId>org.maestro</groupId>
             <artifactId>maestro-activemq-inspectors</artifactId>
             <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.3.1</version>
         </dependency>
 
     </dependencies>
