--- a/maestro-worker/pom.xml
+++ b/maestro-worker/pom.xml
@@ -31,7 +31,6 @@
     <properties>
         <!-- Only for major libraries -->
         <jms.test.util.version>1.1.0</jms.test.util.version>
-        <jetty.version>9.4.8.v20171121</jetty.version>
     </properties>
 
 
@@ -73,12 +72,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
-            <version>${jetty.version}</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.maestro</groupId>
             <artifactId>maestro-common</artifactId>
             <version>${project.version}</version>
@@ -90,6 +83,12 @@
             <version>${project.version}</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.maestro</groupId>
+            <artifactId>maestro-worker-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.maestro</groupId>
