--- a/maestro-inspector/pom.xml
+++ b/maestro-inspector/pom.xml
@@ -52,11 +52,16 @@
         </dependency>
 
         <dependency>
+            <groupId>org.maestro</groupId>
+            <artifactId>maestro-amqp-inspectors</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>1.3.1</version>
         </dependency>
-
     </dependencies>
 
     <build>
