WIP: Added configurable variables for inspect interval and timeout for receive inspect msges

--- a/maestro-inspector/src/main/resources/config/maestro-inspector.properties
+++ b/maestro-inspector/src/main/resources/config/maestro-inspector.properties
@@ -25,3 +25,5 @@
 
 # A fixed hostname to override the auto-detection
 # maestro.inspector.host
+inspector.amqp.management.timeout=2000
+inspector.sleep.interval=5000
