--- a/maestro-reports/src/test/resources/data-ok/inspector/success/1/fake-03.host.com/inspector.properties
+++ b/maestro-reports/src/test/resources/data-ok/inspector/success/1/fake-03.host.com/inspector.properties
@@ -8,3 +8,7 @@ operatingSystemName=Linux
 jvmVersion=1.8
 systemSwap=33780920320
 operatingSystemArch=amd64
+parallelCount=1
+rate=1000000
+variableSize=0
+messageSize=1024
