--- a/extra/docker/maestro-client/Dockerfile
+++ b/extra/docker/maestro-client/Dockerfile
@@ -1,8 +1,8 @@
 FROM centos:7 AS buildimg
 MAINTAINER Otavio Rodolfo Piske <angusyoung@gmail.com>
-ARG MAESTRO_WORKER_VERSION
-ENV MAESTRO_WORKER_VERSION ${MAESTRO_WORKER_VERSION:-1.3
-LABEL MAESTRO_VERSION=${MAESTRO_WORKER_VERSION}
+ARG MAESTRO_VERSION
+ENV MAESTRO_VERSION ${MAESTRO_VERSION:-1.3.0-SNAPSHOT
+LABEL MAESTRO_VERSION=${MAESTRO_VERSION}
 RUN yum install -y java-1.8.0-openjdk-devel git which un
 ENV JAVA_HOME /etc/alternatives/jre
 WORKDIR /root/build
@@ -11,9 +11,9 @@ RUN cd maestro-java && ./mvnw -PPackage clean package
 
 FROM centos:7 as maestro-client
 MAINTAINER Otavio Rodolfo Piske <angusyoung@gmail.com>
-ARG MAESTRO_WORKER_VERSION
-ENV MAESTRO_WORKER_VERSION ${MAESTRO_WORKER_VERSION:-1.3.0}
-LABEL MAESTRO_VERSION=${MAESTRO_WORKER_VERSION}
+ARG MAESTRO_VERSION
+ENV MAESTRO_VERSION ${MAESTRO_VERSION:-1.3.0-SNAPSHOT}
+LABEL MAESTRO_VERSION=${MAESTRO_VERSION}
 ENV GROOVY_VERSION 2.4.14
 
 RUN yum install -y java-1.8.0-openjdk unzip zip which ntp
@@ -27,12 +27,12 @@ ENV MAESTRO_APP_ROOT /opt/maestro
 RUN mkdir -p ${MAESTRO_APP_ROOT}
 WORKDIR ${MAESTRO_APP_ROOT}
 
-COPY --from=buildimg /root/build/maestro-java/maestro-cli/target/maestro-cli-${MAESTRO_WORKER_VERSION}-bin.tar.gz .
-RUN mkdir maestro-cli && tar --strip-components=1 -xvf maestro-cli-${MAESTRO_WORKER_VERSION}-bin -C maestro-cli
-RUN rm -f maestro-cli.tar.gz
+COPY --from=buildimg /root/build/maestro-java/maestro-cli/target/maestro-cli-${MAESTRO_VERSION}-bin.tar.gz .
+RUN mkdir maestro-cli && tar --strip-components=1 -xvf maestro-cli-${MAESTRO_VERSION}-bin.tar.gz -C maestro-cli
+RUN rm -f maestro-cli-${MAESTRO_VERSION}-bin.tar.gz
 
-COPY --from=buildimg /root/build/maestro-java/maestro-test-scripts/target/maestro-test-scripts-${MAESTRO_WORKER_VERSION}-bin.tar.gz .
-RUN mkdir maestro-test-scripts && tar --strip-components=1 -xvf maestro-test-scripts.tar.gz -C maestro-test-scripts
+COPY --from=buildimg /root/build/maestro-java/maestro-test-scripts/target/maestro-test-scripts-${MAESTRO_VERSION}-bin.tar.gz .
+RUN mkdir maestro-test-scripts && tar --strip-components=1 -xvf maestro-test-scripts-${MAESTRO_VERSION}-bin.tar.gz -C maestro-test-scripts
 RUN rm -f maestro-test-scripts.tar.gz
 
 ENV MAESTRO_BROKER mqtt://maestro-broker:1883
@@ -48,6 +48,5 @@ RUN echo "cat /etc/motd" >> $HOME/.bashrc
 RUN mkdir -p /maestro
 VOLUME /maestro
 
-# CMD [ "/usr/bin/bash"]
 ADD maestro-container-wrapper.sh /usr/bin/maestro-container-wrapper
 CMD [ "sh", "-c", "/usr/bin/maestro-container-wrapper"]
