--- a/extra/docker/maestro-worker/maestro-inspector/Dockerfile
+++ b/extra/docker/maestro-worker/maestro-inspector/Dockerfile
@@ -7,9 +7,10 @@ RUN yum install -y java-1.8.0-openjdk-devel git which unzip zip
 ENV JAVA_HOME /etc/alternatives/jre
 WORKDIR /root/build
 RUN git clone https://github.com/maestro-performance/maestro-java.git --branch devel
-RUN cd maestro-java && ./mvnw -PPackage clean package
+RUN cd maestro-java && ./mvnw -DskipTests=true -PPackage clean package
 
 FROM centos:7 AS maestro-inspector
+ENV MAESTRO_WORKER_TYPE inspector
 MAINTAINER Otavio Rodolfo Piske <angusyoung@gmail.com>
 ARG MAESTRO_WORKER_VERSION
 ENV MAESTRO_WORKER_VERSION ${MAESTRO_WORKER_VERSION:-1.3.0-SNAPSHOT}
@@ -19,15 +20,16 @@ EXPOSE 8000
 RUN mkdir -p ${MAESTRO_APP_ROOT}
 WORKDIR ${MAESTRO_APP_ROOT}
 RUN yum install -y java-1.8.0-openjdk ntp
-COPY --from=buildimg /root/build/maestro-java/maestro-inspector/target/maestro-inspector-${MAESTRO_WORKER_VERSION}-bin.tar.gz .
-RUN mkdir maestro-inspector && tar --strip-components=1 -xvf maestro-inspector-${MAESTRO_WORKER_VERSION}-bin.tar.gz -C maestro-inspector
-RUN rm -f maestro-inspector.tar.gz
+COPY --from=buildimg /root/build/maestro-java/maestro-${MAESTRO_WORKER_TYPE}/target/maestro-${MAESTRO_WORKER_TYPE}-${MAESTRO_WORKER_VERSION}-bin.tar.gz .
+RUN mkdir maestro-${MAESTRO_WORKER_TYPE} && tar --strip-components=1 -xvf maestro-${MAESTRO_WORKER_TYPE}-${MAESTRO_WORKER_VERSION}-bin.tar.gz -C maestro-${MAESTRO_WORKER_TYPE}
+RUN rm -f maestro-${MAESTRO_WORKER_TYPE}.tar.gz
 RUN mkdir -p /maestro
 VOLUME /maestro
 
-ADD log4j.properties ${MAESTRO_APP_ROOT}/maestro-inspector/config/log4j.properties
+ADD log4j.properties ${MAESTRO_APP_ROOT}/maestro-${MAESTRO_WORKER_TYPE}/config/log4j.properties
+ADD maestro-${MAESTRO_WORKER_TYPE}.properties ${MAESTRO_APP_ROOT}/maestro-${MAESTRO_WORKER_TYPE}/config/maestro-${MAESTRO_WORKER_TYPE}.properties
 RUN mkdir -p /maestro/
 VOLUME /maestro/
-RUN mkdir -p /maestro/sender/logs
+RUN mkdir -p /maestro/${MAESTRO_WORKER_TYPE}/logs
 ADD maestro-container-wrapper.sh /usr/bin/maestro-container-wrapper
 CMD [ "sh", "-c", "/usr/bin/maestro-container-wrapper"]
