--- a/extra/docker/maestro-client/Dockerfile
+++ b/extra/docker/maestro-client/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Otavio Rodolfo Piske <angusyoung@gmail.com>
 ARG MAESTRO_VERSION
 ENV MAESTRO_VERSION ${MAESTRO_VERSION:-1.3.0-SNAPSHOT
 LABEL MAESTRO_VERSION=${MAESTRO_VERSION}
-RUN yum install -y java-1.8.0-openjdk-devel git which un
+RUN yum install -y java-1.8.0-openjdk-devel git which unzip zip ntp
 ENV JAVA_HOME /etc/alternatives/jre
 WORKDIR /root/build
 RUN git clone https://github.com/maestro-performance/maestro-java.git --branch devel
