--- a/extra/docker/docker-activemq-compose.yml
+++ b/extra/docker/docker-activemq-compose.yml
@@ -9,8 +9,6 @@ services:
       - maestro-net
     ports:
       - "18161:8161"
-      # Usually it's not needed to expose MQTT port
-      # - "18883:1883"
   maestro-sut:
     build: maestro-suts/apache-activemq
     networks: 
@@ -25,9 +23,9 @@ services:
     build:
       context: maestro-worker/maestro-receiver
       args:
-        - MAESTRO_WORKER_VERSION=1.2.4
+        - MAESTRO_WORKER_VERSION=1.3.0-SNAPSHOT
     ports:
-      - "28000:8000"
+      - "18000:8000"
     volumes:
       - ${HOME}/tmp/maestro:/maestro
     networks: 
@@ -39,20 +37,46 @@ services:
     build:
       context: maestro-worker/maestro-sender
       args:
-        - MAESTRO_WORKER_VERSION=1.2.4
+        - MAESTRO_WORKER_VERSION=1.3.0-SNAPSHOT
     ports:
-      - "38000:8000"
+      - "28000:8000"
     volumes:
       - ${HOME}/tmp/maestro:/maestro
     networks: 
       - maestro-net
     depends_on:
       - maestro-receiver
+  maestro-inspector:
+      build:
+        context: maestro-worker/maestro-inspector
+        args:
+          - MAESTRO_WORKER_VERSION=1.3.0-SNAPSHOT
+      ports:
+        - "38000:8000"
+      volumes:
+        - ${HOME}/tmp/maestro:/maestro
+      networks:
+        - maestro-net
+      depends_on:
+        - maestro-receiver
+  maestro-agent:
+        build:
+          context: maestro-worker/maestro-agent
+          args:
+            - MAESTRO_WORKER_VERSION=1.3.0-SNAPSHOT
+        ports:
+          - "48000:8000"
+        volumes:
+          - ${HOME}/tmp/maestro:/maestro
+        networks:
+          - maestro-net
+        depends_on:
+          - maestro-broker
   maestro-client:
     build:
       context: maestro-client
       args:
-        - MAESTRO_WORKER_VERSION=1.2.4
+        - MAESTRO_WORKER_VERSION=1.3.0-SNAPSHOT
     volumes:
       - ${HOME}/tmp/maestro:/maestro
     networks: 
@@ -62,4 +86,5 @@ services:
     depends_on:
       - maestro-sender
       - maestro-receiver
+      - maestro-broker
   
