--- a/maestro-reports/pom.xml
+++ b/maestro-reports/pom.xml
@@ -79,6 +79,12 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.maestro</groupId>
+            <artifactId>maestro-plotter-amqp-inspector</artifactId>
+            <version>1.3.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
