UPD: runner scripts for the simplified container names

--- a/extra/docker-compose/maestro/workers/receiver/maestro-worker.properties
+++ b/extra/docker-compose/maestro/workers/receiver/maestro-worker.properties
@@ -24,7 +24,7 @@ data.server.port=8000
 # data.server.host=my.fqdn.host.com
 
 # Use a fixed host to override the host detection mechanism
-maestro.worker.host=maestro-receiver
+maestro.worker.host=receiver
 
 # The amount of time, in milliseconds, between each update of the latency reporting information.
 # This also affects how fresh the latency information is when evaluating the FCL for go/no-go
