FIX: passing incorrect argument name to the client

--- a/extra/docker-compose/maestro/docker-devel-compose.yml
+++ b/extra/docker-compose/maestro/docker-devel-compose.yml
@@ -50,7 +50,7 @@ services:
 #    build:
 #      context: client
 #      args:
-#        - MAESTRO_WORKER_VERSION=devel
+#        - MAESTRO_VERSION=devel
 #    volumes:
 #      - ${HOME}/tmp/maestro:/maestro
 #    networks:
