--- a/extra/docker-compose/maestro/docker-rabbitmq-compose.yml
+++ b/extra/docker-compose/maestro/docker-rabbitmq-compose.yml
@@ -79,7 +79,7 @@ services:
       build:
         context: client
         args:
-          - MAESTRO_WORKER_VERSION=1.3.0-SNAPSHOT
+          - MAESTRO_VERSION=1.3.0-SNAPSHOT
       volumes:
         - ${HOME}/tmp/maestro:/maestro
       networks:
