--- a/extra/docker-compose/maestro/suts/qpid-dispatch/Dockerfile
+++ b/extra/docker-compose/maestro/suts/qpid-dispatch/Dockerfile
@@ -5,6 +5,7 @@ ENV MAESTRO_SUT_ROOT /opt/maestro/sut
 
 # Install all required packages
 RUN yum -y install gcc cmake libuuid-devel openssl-devel cyrus-sasl-devel cyrus-sasl-plain cyrus-sasl-gssapi cyrus-sasl-md5 swig python-devel java-1.8.0-openjdk-devel git make doxygen valgrind emacs libuv libuv-devel libwebsockets-devel python-unittest2 && yum clean all -y
+RUN yum clean all
 
 # Create a main directory and clone the qpid-proton repo from github
 RUN mkdir -p ${MAESTRO_SUT_ROOT}/ && cd ${MAESTRO_SUT_ROOT}/ && git clone https://git-wip-us.apache.org/repos/asf/qpid-proton.git  && cd ${MAESTRO_SUT_ROOT}/qpid-proton && mkdir -p ${MAESTRO_SUT_ROOT}/qpid-proton/build
