UPD: to use a common address for the data server instance on the container

--- a/extra/docker-compose/maestro/workers/agent/maestro-agent.properties
+++ b/extra/docker-compose/maestro/workers/agent/maestro-agent.properties
@@ -21,7 +21,7 @@ data.server.port=8000
 
 # Data server host can be used to override the automatically detected
 # hostname/IP address
-# data.server.host=my.fqdn.host.com
+data.server.host=agent
 
 # A folder that overrides the default extension points provided w/ the Agent
 # maestro.agent.ext.path.override=/path/to/default/override/requests
