--- a/extra/docker-compose/maestro/workers/inspector/maestro-inspector.properties
+++ b/extra/docker-compose/maestro/workers/inspector/maestro-inspector.properties
@@ -21,7 +21,7 @@ data.server.port=8000
 
 # Data server host can be used to override the automatically detected
 # hostname/IP address
-# data.server.host=my.fqdn.host.com
+data.server.host=inspector
 
 # A fixed hostname to override the auto-detection
 # maestro.inspector.host
