--- a/extra/docker-compose/maestro/workers/receiver/maestro-worker.properties
+++ b/extra/docker-compose/maestro/workers/receiver/maestro-worker.properties
@@ -21,7 +21,7 @@ data.server.port=8000
 
 # Data server host can be used to override the automatically detected
 # hostname/IP address
-# data.server.host=my.fqdn.host.com
+data.server.host=receiver
 
 # Use a fixed host to override the host detection mechanism
 maestro.worker.host=receiver
