FIX: network names used by other suts

--- a/extra/docker-compose/maestro/docker-artemis-compose.yml
+++ b/extra/docker-compose/maestro/docker-artemis-compose.yml
@@ -1,11 +1,8 @@
 version: '3'
-networks:
-    maestro:
-      driver: bridge
-services: 
+services:
   sut:
     build: suts/apache-artemis
     networks: 
-      - maestro
+      - test
     ports:
       - "48161:8161"
