FIX: added missing configuration details for the agent host override

--- a/maestro-agent/src/main/resources/config/maestro-agent.properties
+++ b/maestro-agent/src/main/resources/config/maestro-agent.properties
@@ -23,5 +23,8 @@
 # hostname/IP address
 # data.server.host=my.fqdn.host.com
 
+# Use a fixed host to override the host detection mechanism
+# maestro.agent.host=my.fqdn.host.com
+
 # A folder that overrides the default extension points provided w/ the Agent
 # maestro.agent.ext.path.override=/path/to/default/override/requests
