FIX: added missing configuration details for the agent host override in the containers

--- a/extra/docker-compose/maestro/workers/agent/maestro-agent.properties
+++ b/extra/docker-compose/maestro/workers/agent/maestro-agent.properties
@@ -23,5 +23,8 @@ data.server.port=8000
 # hostname/IP address
 data.server.host=agent
 
+# Use a fixed host to override the host detection mechanism
+maestro.agent.host=agent
+
 # A folder that overrides the default extension points provided w/ the Agent
 # maestro.agent.ext.path.override=/path/to/default/override/requests
